added npm keywords

--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "dependencies": {
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
-  }
+  },
+  "keywords": [
+    "feathersjs",
+    "service",
+    "instagram"
+  ]
 }
